feat(docker): trying athena setup without venv WIP

--- a/athena/athena_local.ini
+++ b/athena/athena_local.ini
@@ -1,8 +1,8 @@
 [watcher:athena-worker]
 cmd = python athena_beanstalkd.py
 numprocesses = 2
-copy_env = True
-virtualenv = ./venv
+# copy_env = True
+# virtualenv = ./venv
 
 # will push in test.log the stream every 300 ms
 # stdout_stream.class=FileStream
