feat(docker): getting athena working

--- a/athena/Dockerfile
+++ b/athena/Dockerfile
@@ -5,8 +5,6 @@ WORKDIR /usr/src/mappr/athena
 
 COPY *.txt /usr/src/mappr/athena/
 
-RUN pip install --no-cache-dir -r requirements.txt
-
 COPY athena /usr/src/mappr/athena/athena
 COPY tests /usr/src/mappr/athena/tests
 COPY *.conf /usr/src/mappr/athena/
@@ -14,6 +12,11 @@ COPY *.ini /usr/src/mappr/athena/
 COPY *.py /usr/src/mappr/athena/
 COPY *.sh /usr/src/mappr/athena/
 
-RUN cd athena/algorithms/NetworkAnalysis/ForceDirected && make
+RUN virtualenv venv
+RUN . venv/bin/activate && \
+	pip install --no-cache-dir -r requirements.txt && \
+	cd athena/algorithms/NetworkAnalysis/ForceDirected && \
+	make clean && make && \
+	deactivate
 
-CMD [ "python"]
+CMD [ "/bin/bash"]
