--- a/athena/athena_docker.ini
+++ b/athena/athena_docker.ini
@@ -18,6 +18,6 @@ virtualenv = ./venv
 # stdout_stream.backup_count=5
 
 [env:athena-worker]
-CONFIG=DevelopmentConfig
+CONFIG=DockerConfig
 AWS_ACCESS_KEY_ID=<>
 AWS_SECRET_ACCESS_KEY=<>
