feat(docker): athena without venv WIP

--- a/athena/Dockerfile
+++ b/athena/Dockerfile
@@ -5,17 +5,12 @@ WORKDIR /usr/src/mappr/athena
 
 COPY *.txt /usr/src/mappr/athena/
 
-RUN virtualenv venv
-RUN . venv/bin/activate && \
-  pip install --no-cache-dir -r requirements.txt && \
-  deactivate
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY athena /usr/src/mappr/athena/athena
 
-RUN . venv/bin/activate && \
-  cd athena/algorithms/NetworkAnalysis/ForceDirected && \
-  make clean && make && \
-  deactivate
+RUN cd athena/algorithms/NetworkAnalysis/ForceDirected && \
+  make clean && make
 
 COPY tests /usr/src/mappr/athena/tests
 COPY *.conf /usr/src/mappr/athena/
@@ -23,4 +18,4 @@ COPY *.ini /usr/src/mappr/athena/
 COPY *.py /usr/src/mappr/athena/
 COPY *.sh /usr/src/mappr/athena/
 
-CMD [ "/bin/bash"]
+CMD ["/bin/bash"]
