--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,8 @@ services:
     ports:
       - "27017:27017"
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.6.6
+    image: elasticsearch:2.4
+    #image: docker.elastic.co/elasticsearch/elasticsearch:5.6.6
     environment:
       - "discovery.type=single-node"
       - "xpack.security.enabled=false"
