--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     build: ./mongo
     ports:
       - "27017:27017"
+    volumes:
+      - ./mongo/data:/data/db
   elasticsearch:
     image: elasticsearch:2.4
     #image: docker.elastic.co/elasticsearch/elasticsearch:5.6.6
