--- a/bower.json
+++ b/bower.json
@@ -2,26 +2,26 @@
   "name": "mappr-beta",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.5.1",
-    "angular-animate": "~1.5.1",
-    "angular-audio": "*",
-    "angular-bindonce": "~0.3.1",
-    "angular-bootstrap": "~1.1.0",
-    "angular-cookies": "~1.5.1",
+    "angular": "^1.6.9",
+    "angular-animate": "^1.6.9",
+    "angular-audio": "^1.7.4",
+    "angular-bindonce": "^0.3.3",
+    "angular-bootstrap": "^2.5.0",
+    "angular-cookies": "^1.6.9",
     "angular-leaflet": "*",
-    "angular-loading-bar": "~0.7.1",
-    "angular-resource": "~1.5.1",
-    "angular-route": "~1.5.1",
-    "angular-sanitize": "~1.5.1",
-    "angular-scroll": "*",
-    "angular-simple-logger": "~0.1.2",
-    "angular-touch": "~1.5.1",
-    "angular-ui-slider": "~0.1.3",
-    "angular-ui-sortable": "~0.13.4",
-    "angular-vs-repeat": "~1.1.7",
-    "angular-wizard": "~0.3.0",
-    "bootstrap": "~3.3.5",
-    "bootstrap-file-input": "*",
+    "angular-loading-bar": "^0.9.0",
+    "angular-resource": "^1.6.9",
+    "angular-route": "^1.6.9",
+    "angular-sanitize": "^1.6.9",
+    "angular-scroll": "^1.0.2",
+    "angular-simple-logger": "^0.1.7",
+    "angular-touch": "^1.6.9",
+    "angular-ui-slider": "^0.4.0",
+    "angular-ui-sortable": "^0.19.0",
+    "angular-vs-repeat": "^1.1.7",
+    "angular-wizard": "^1.1.1",
+    "bootstrap": "^3.3.6",
+    "bootstrap-file-input": "~1.1.0",
     "bootstrap-sass-official": "~3.3.5",
     "d3": "~3.5.13",
     "es5-shim": "~2.1.0",
@@ -43,6 +43,7 @@
     "ng-device-detector": "1.1.1",
     "ng-file-upload": "12.0.4",
     "ngInfiniteScroll": "~1.1.2",
+    "rangy": "~1.3.0",
     "re-tree": "~0.0.2",
     "requirejs": "*",
     "remarkable-bootstrap-notify": "~3.1.3",
@@ -50,11 +51,12 @@
     "snap.svg": "~0.4.1",
     "spectrum": "*",
     "succinct": "~1.1.0",
-    "textAngular": "~1.2.0",
+    "textAngular": "~1.5.16",
     "toastr": "~2.1.1",
     "twix": "~0.7.2",
     "weather-icons": "~0.0.1",
-    "angular-google-analytics": "*"
+    "angular-google-analytics": "*",
+    "angular-leaflet-directive": "angular-leaflet#^0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.1",
@@ -63,7 +65,20 @@
     "responsive-tables": "*"
   },
   "resolutions": {
-    "angular": "~1.5.1",
-    "jquery": "~2.1.0"
+    "angular": "1.6.9",
+    "jquery": "~2.1.0",
+    "angular-animate": "~1.6.9",
+    "angular-bootstrap": "~2.5.0",
+    "angular-cookies": "~1.6.9",
+    "angular-loading-bar": "~0.9.0",
+    "angular-resource": "~1.6.9",
+    "angular-route": "~1.6.9",
+    "angular-sanitize": "~1.6.9",
+    "angular-touch": "~1.6.9",
+    "angular-ui-slider": "~0.4.0",
+    "jquery-ui": ">=1.12.x",
+    "angular-ui-sortable": "~0.19.0",
+    "angular-wizard": "~1.1.1",
+    "bootstrap": "~4.0.0"
   }
 }
